[package]
name = "piggy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["std"] }
chronoutil = "0.2.3"
rocket = "0.4.11"
thiserror = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.11"
