[package]
name = "piggy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
chrono = { version = "0.4.23", features = ["std"] }
chronoutil = "0.2.3"
rocket = "0.4.11"
thiserror = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.11"
